[package]
name = "smh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.21", features = ["derive"]}
dirs = "5.0.1"
eyre = "0.6.8"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"

[build.release]
lto = true
strip = true
codegen-units = 1
